Fix links forgot to add https....

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div>
 
     <div class="socials">
-        <a href="//github.com/MarcioSobel"  target="_blank" class="social-link interactable" data-type="github">GitHub</a>
-        <a href="//x.com/@MarcioSobel_"     target="_blank" class="social-link interactable" data-type="twitter">Twitter</a>
-        <a href="//youtube.com/MarcioSobel" target="_blank" class="social-link interactable" data-type="youtube">Youtube</a>
+        <a href="https://github.com/MarcioSobel"  target="_blank" class="social-link interactable" data-type="github">GitHub</a>
+        <a href="https://x.com/@MarcioSobel_"     target="_blank" class="social-link interactable" data-type="twitter">Twitter</a>
+        <a href="https://youtube.com/MarcioSobel" target="_blank" class="social-link interactable" data-type="youtube">Youtube</a>
     </div>
 
     <div class="images">
